# advEx5

./: CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  commands.h  timeseries.cpp  timeseries.h
